# clean_architecture

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
rentomatic/domain/: room.py
rentomatic/repository/: memrepo.py
tests/domain/: test_room.py
tests/repository/: test_memrepo.py
